--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -144,9 +144,7 @@
 </head>
 <body>
   <!-- header -->
-  <div id='header'>
-    
-	</div>
+  <div th:replace="header.html"></div>
   <!-- header -->
   
   <br>
@@ -293,9 +291,7 @@
   <br>
 
   <!--footer-->
-  <div id='footer'>
-
-  </div>
+  <div th:replace="footer.html"></div>
   <!--footer-->
 </body>
 </html>
