--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -208,8 +208,11 @@
           </div>
           <!-- 구독자 수 선택 -->
           <br>
-          <center><input TYPE="IMAGE" src="https://i.ibb.co/QcnSd4c/search-Button.png" onmouseover="this.src='https://i.ibb.co/smB0fq5/search-Button.png'" 
-            onmouseout="this.src='https://i.ibb.co/QcnSd4c/search-Button.png'" name="submit" value="submit"><center/>
+          <center><input TYPE="IMAGE" src="https://i.ibb.co/QcnSd4c/search-Button.png" 
+            onmouseover="this.src='https://i.ibb.co/smB0fq5/search-Button.png'" 
+            onmouseout="this.src='https://i.ibb.co/QcnSd4c/search-Button.png'" 
+            name="submit" value="submit">
+          <center/>
 
         </form>
 
@@ -237,7 +240,7 @@
                   <th width = "50px" align="center"> 찜 </th>
                 </tr>
                 <tr th:each="channel,i : ${list}">
-                  <td><a th:href="@{/detailPage(url=${channel.ch_url})}"><img th:id = "${i.index}" src='' alt="" width="125" height="125"></a></td>  <!-- 채널 프로필 사진 이미지 태그-->
+                  <td><a th:href="@{/detailPage(ch_url=${channel.ch_url})}"><img th:id = "${i.index}" src='' alt="" width="125" height="125"></a></td>  <!-- 채널 프로필 사진 이미지 태그-->
                   <td>&nbsp;</td>
                   <td align="center"><span th:text="${channel.ch_name}"> 채널 이름 </span></td>
                   <td>&nbsp;</td>
@@ -245,7 +248,7 @@
                   <td>&nbsp;</td>
                   <td align="center"><span th:text="${channel.category}"> 카테고리 </span></td>
                   <td>&nbsp;</td>
-                  <td align="center"><a th:href="@{/detailPage(url=${channel.ch_url})}"><span th:text="${channel.adcount}"> 광고 개수 </span></a></td>
+                  <td align="center"><a th:href="@{/detailPage(ch_url=${channel.ch_url})}"><span th:text="${channel.adcount}"> 광고 개수 </span></a></td>
                   <td></td>
                   <td th:id="${i.index}">
                     <button type="button" th:id="${i.index}" name = "delete" th:value = "${channel.ch_url}">
