체크박스 잘 되게 하기

--- a/src/main/resources/templates/RecommendPage.html
+++ b/src/main/resources/templates/RecommendPage.html
@@ -159,9 +159,9 @@
                             <th> 평균 조회수 </th>
                         </tr>
                         <tr th:each = "ordin,i : ${general}">
-                            <td><a th:href="@{/detailPage(url=${ordin.ch_url})}"><img th:id = "${i.index}" src="" alt=""></a></td>
+                            <td><a th:href="@{/detailPage(ch_url=${ordin.ch_url})}"><img th:id = "${i.index}" src="" alt=""></a></td>
                             <td></td>
-                            <td align="center"><a th:href="@{/detailPage(url=${ordin.ch_url})}"><span th:text = "${ordin.ch_name}" > 이름 </span></a></td>
+                            <td align="center"><a th:href="@{/detailPage(ch_url=${ordin.ch_url})}"><span th:text = "${ordin.ch_name}" > 이름 </span></a></td>
                             <td></td>
                             <td align="center"> <span th:text = "${ordin.adavgview}" > 평균 조회수 </span></td>
                             <script>
@@ -183,7 +183,7 @@
                             <th> 유사도 </th>
                         </tr>
                         <tr th:each="recom,i : ${list}">
-                            <td align="center"><a th:href="@{/detailPage(url=${recom.ch_url})}"><span th:text="${recom.ch_name}"> 채널 이름 </span></a></td>
+                            <td align="center"><a th:href="@{/detailPage(ch_url=${recom.ch_url})}"><span th:text="${recom.ch_name}"> 채널 이름 </span></a></td>
                             <td></td>
                             <td align="center"><span th:text="${recom.similarity}"> 유사도 </span></td>
                         </tr>
