개인정보수정빼고 다 완료

--- a/src/main/resources/templates/detailPage.html
+++ b/src/main/resources/templates/detailPage.html
@@ -154,6 +154,7 @@
                 <img id = 'profile' src="" alt="" width = "150px" height = "150px"><br>
                 채널 명 : <span th:text = "${detail.ch_name}"></span><br>
                 가입 날짜 : <span th:text = "${detail.regdate}"></span><br>
+                누적 조회수 : <span th:text = "${detail.totview}"></span><br>
                 팬클럽 유무 : <span th:text = "${detail.fan}"></span><br>
                 한달 업로드 수 : <span th:text = "${detail.upload}"></span><br>
                 인스타 태그 수 : <span th:text = "${detail.insta}"></span><br>
