--- a/src/main/resources/templates/listPage.html
+++ b/src/main/resources/templates/listPage.html
@@ -254,15 +254,15 @@
                   <td th:id="${i.index}">
                     <!-- 찜 완료 버튼 --><!----------------------------------------------------------------------------------------------------->
                     <button type="button" th:id="${i.index}" class="btn btn-secondary" name = "delete" th:value = "${channel.ch_url}">
-                      <!--<img src="https://i.ibb.co/CJr1zpV/calldibs-button2.png">-->
+                      <img src="https://i.ibb.co/CJr1zpV/calldibs-button2.png">
                     </button>
                     <!-- 찜 완료 버튼 --><!----------------------------------------------------------------------------------------------------->
 
                     <!-- 찜 하기 버튼 --><!----------------------------------------------------------------------------------------------------->
                     <button type="button" th:id="${i.index}" class="btn btn-secondary" name = "insert" th:value = "${channel.ch_url}">
-                      <!--<img src="https://i.ibb.co/g6MZYqm/calldibs-button.png" 
+                      <img src="https://i.ibb.co/g6MZYqm/calldibs-button.png" 
                       onmouseover="this.src='https://i.ibb.co/YDRmjrG/calldibs-button.png'" 
-                      onmouseout="this.src='https://i.ibb.co/g6MZYqm/calldibs-button.png'">-->
+                      onmouseout="this.src='https://i.ibb.co/g6MZYqm/calldibs-button.png'">
                     </button>
                     <!-- 찜 하기 버튼 --><!----------------------------------------------------------------------------------------------------->
                   </td>
