--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -182,14 +182,14 @@
                       <td>&nbsp;</td>
                       <td align="center"><a th:href="@{/detailPage(ch_url=${ggim.ch_url})}"><span th:text="${ggim.adcount}"> 광고 개수 </span></a></td>
                       <td></td>
-                        <td align="center"><button type="button" class="btn btn-light" id="delete" th:value = "${ggim.ch_url}"> 제거 </button></td>
-                        <script>
-                            id = '#';
-                            id = id + i;
-                            $(id).attr('src',ggim[i].img);
-                            console.log(ggim[i].ch_url);
-                            i += 1;
-                        </script>
+                      <td align="center"><button type="button" class="btn btn-light" th:id="${i.index}" th:value = "${ggim.ch_url}"> 제거 </button></td>
+                      <script>
+                          id = '#';
+                          id = id + i;
+                          $(id).attr('src',ggim[i].img);
+                          console.log(ggim[i].ch_url);
+                          i += 1;
+                      </script>
                     </tr>
                   </table>
             
@@ -207,7 +207,10 @@
                                     document.dataForm.submit();
                                 }
                     });
-                    $('#delete').click(function(){
+                    let maria;
+                    for(var k = 0; k < ggim.length; k++){
+                      maria = "button[id='" + k + "']";
+                      $(maria).click(function(){
                         if (confirm("찜 목록에서 제거하시겠습니까?")) {
                           var html = "";
                           chch = $(this).val();
@@ -220,6 +223,8 @@
                           document.dataForm.submit();
                         }
                       });
+                    }
+                    
                   </script>
                 </td>
             </tr>
